--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@
 # Gradle
 .idea/**/gradle.xml
 .idea/**/libraries
+/src/main/resources/application.yml
 
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
