--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,8 @@ dependencies {
 	annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta' // querydsl JPAAnnotationProcessor 사용 지정
 	annotationProcessor 'jakarta.annotation:jakarta.annotation-api' // java.lang.NoClassDefFoundError (javax.annotation.Generated) 대응 코드
 	annotationProcessor 'jakarta.persistence:jakarta.persistence-api' // java.lang.NoClassDefFoundError (javax.annotation.Entity) 대응 코드
-    testImplementation 'com.navercorp.fixturemonkey:fixture-monkey:1.0.26'
+    testImplementation 'com.navercorp.fixturemonkey:fixture-monkey:1.0.24'
+	testImplementation("com.navercorp.fixturemonkey:fixture-monkey-jakarta-validation:1.0.24")
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
