--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,9 +12,9 @@ spring:
 
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://localhost:65006/mummus?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-    username: mummus
-    password: 1234
+    url:
+    username:
+    password:
     minimum-idle: 10
     maximum-pool-size: 10
 
@@ -33,10 +33,10 @@ spring:
       client:
         registration:
           kakao:
-            client-id: 4f131fd34d9f1ec370a698fbc0b98c3b
-            client-secret: 7uZMud6cKiYFPiJl1htltIYf64jnJ9M2
+            client-id:
+            client-secret:
             client-authentication-method: client_secret_post
-            redirect-uri: http://localhost:8080/login/oauth2/code/kakao
+            redirect-uri:
             authorization-grant-type: authorization_code
             client-name: Kakao
             scope:
@@ -48,3 +48,20 @@ spring:
             token-uri: https://kauth.kakao.com/oauth/token
             user-info-uri: https://kapi.kakao.com/v2/user/me
             user-name-attribute: id
+  servlet:
+    multipart:
+      max-file-size: 50MB
+      max-request-size: 50MB
+
+cloud:
+  aws:
+    s3:
+      bucket:
+    region:
+      static: ap-northeast-2
+      auto: false
+    stack:
+      auto: false
+    credentials:
+      access-key:
+      secret-key:
